2009-12-16  Alberto Garcia  <agarcia@igalia.com>

	=== Released Vagalume 0.8.1 ===

2009-12-16  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac:
	Install data files in /opt in the N900, since the rootfs is quite
	small.
	Remove unnecessary variable.

2009-12-15  Alberto Garcia  <agarcia@igalia.com>

	* src/lastfm-ws.c (lastfm_ws_radio_tune):
	Fall back to the old streaming API if the new one doesn't work.

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	=== Released Vagalume 0.8 ===

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* src/dlwin.c
	* src/protocol.c
	* src/compat.c: Fix compilation warnings

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* debian/rules: Include gnome.mk from CDBS

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* po/gl.po
	* po/pt.po: Minor translation fixes

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.[ch]
	* src/uimisc.[ch]
	* src/uimisc.c
	* src/vgl-main-window.c
	* src/vgl-server.[ch]:
	New menu entry to import a config file with server info.

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am
	* configure.ac:
	Use just 'Vagalume' in the 'Name' field of the vagalume.desktop
	file in Maemo 5, since longer names don't fit.

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* src/http.c: Increase HTTP timeout

2009-12-13  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.[ch]:
	(-flush_ui_events) Remove unused function

2009-12-11  Alberto Garcia  <agarcia@igalia.com>

	* debian/control.maemo[2345]:
	Update control files to use the new Vagalume icon

2009-12-11  Alberto Garcia  <agarcia@igalia.com>

	* debian/changelog:
	* configure.ac
	* NEWS: Updated for the upcoming v0.8 release

2009-12-10  Otto Krüja  <ottokrueja@gmx.net>

	* data/icons/*/*:
	Make the corners of the Vagalume icon rounded.

2009-12-03  Alberto Garcia  <agarcia@igalia.com>

	* src/main.c (main): Call hildon_gtk_init() in Maemo 5

2009-11-20  Amador Loureiro Blanco  <dorfun@adorfunteca.org>
