@@ -1,3 +1,8 @@
+2009-12-19  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/lastfm-ws.c (lastfm_ws_get_session):
+	Convert the user name to lowercase when creating a new session.
+
 2009-12-16  Alberto Garcia  <agarcia@igalia.com>
 
 	=== Released Vagalume 0.8.1 ===
